--- a/playbook_tg_bot.yaml
+++ b/playbook_tg_bot.yaml
@@ -1,101 +1,92 @@
-
-- hosts: bot
-  vars_files:
-    - env.yml
-  gather_facts: yes
-  become: yes
-  tasks:
-    - name: "cloning_bot"
-      git:
-        repo: https://github.com/Meronid/YouAreNotFoundThis.git
-        version: docker
-        clone: yes
-        force: yes
-        update: yes
-        dest: /tmp/cloned_bot/
-    - name: "bot"
-      ansible.builtin.file:
-        state: directory
-        path: /usr/src/application/
-    - name: "bot_move_bot"
-      command: cp -rf /tmp/cloned_bot/bot_image/ /usr/src/
-    - name: "apt_bot"
-      apt:
-        state: present
-        name:
-          - postgresql-contrib
-          - postgresql-common
-          - python3
-          - python3-dev
-          - python3-pip
-          - jq
-          - libpq-dev
-    - name: "bot_pip"
-      pip:
-        requirements: /usr/src/bot_image/requirements.txt
-    - name: add_env
-      shell: touch /usr/src/application/.env && chmod 0777 /usr/src/application/.env
-    - name: "remove_clened"
-      shell: /bin/rm -rf /tmp/cloned
-
-- hosts: db
+- name: Set up bot
+  hosts: all    # playbook запустится для всех хостов в inventory.
+  become: yes   # команда позволяет ansible использовать права root.
   vars:
-    allow_world_readable_tmpfiles: true
-  vars_files:
-    - env.yml
-  gather_facts: yes
-  become: yes
-  tasks:
-    - name: "apt_db"
-      apt:
-        state: present
-        name:
-          - postgresql
-          - postgresql-contrib
-          - python3
-          - python3-pip
-          - acl
-          - libpq-dev
-    - name: "pip_psycorg2"
-      pip:
-        state: present
-        name:
-          - psycopg2
-    - name: "db_ig"
-      ansible.builtin.file:
-        state: absent
-        path: /usr/lib/python3.11/EXTERNALLY-MANAGED
-    - name: "hba"
-      copy:
-        dest: /etc/postgresql/14/main/pg_hba.conf
-        src: pg_hba.conf
-    - name: "hba_insert_first"
-      ansible.builtin.lineinfile:
-        line: "host all all {{ hostvars['bot_server'].ansible_host }}/24 password"
-        path: /etc/postgresql/14/main/pg_hba.conf
-    - name: "hba_insert_second"
-      ansible.builtin.lineinfile:
-        line: "host replication {{ DB_REPL_USER  }} {{ hostvars['db_repl_server'].ansible_host }}/24 scram-sha-256"
-        path: /etc/postgresql/14/main/pg_hba.conf
-    - name: "db_config"
-      copy:
-        dest: /etc/postgresql/14/main/postgresql.conf
-        src: config-postgresql
-    - name: "db_stop"
-      service: "name={{ item }} state=stopped"
-      with_items:
-        - postgresql
-    - name: "db_start"
-      service: "name={{ item }} state=started enabled=yes"
-      with_items:
-        - postgresql
-    - name: "db_pg_create"
-      become_user: "{{DB_USER}}"
-      become: yes
-      postgresql_db:
-        name: "{{ DB_DATABASE }}"
-        state: present
-    - name: "phonenumbers"
+  - env.yml
+  tasks:        # ниже начинается список задач. Обратите внимание, tasks во множественном числе. Иначе получим ошибку при выполнении плейбука
+
+
+  - name: Update apt cache
+    ansible.builtin.apt:
+      update_cache: yes
+
+  - name: Install packages
+    ansible.builtin.apt:
+      name: ['python3', 'postgresql']
+      state: present
+
+  - name: Pip install requirements
+    ansible.builtin.pip:
+      requirements: /temp/docker/bot_image/requirements.txt
+      extra_args: "--break-system-packages"
+    delegate_to: host01
+
+  - name: Check if GitHub repository is already cloned
+    ansible.builtin.stat:
+      path: /temp/docker
+    register: repo_status
+    delegate_to: host01
+
+  - name: Download project
+    ansible.builtin.git:
+      repo: 'https://github.com/Meronid/YouAreNotFoundThis.git'
+      dest: '/temp/docker'
+      version: docker
+    when: not repo_status.stat.exists
+    delegate_to: host01
+
+  - name: Stop db
+    ansible.builtin.systemd:
+      name: postgresql
+      state: stopped
+    delegate_to: host01
+
+  - name: Create MASTER_DB conf
+    ansible.builtin.template:
+      src: ./config-postgresql
+      dest: /etc/postgresql/14/main/postgresql.conf
+      owner: root
+      group: root
+      mode: 0644
+    delegate_to: host01
+
+  - name: Create MASTER_DB pg_hba.conf
+    ansible.builtin.template:
+      src: ./pg_hba.conf
+      dest: /etc/postgresql/14/main/pg_hba.conf
+      owner: root
+      group: root
+      mode: 0644
+    delegate_to: host01
+
+  - name: Create log_dir
+    ansible.builtin.shell: |
+       mkdir -p /temp/db_logs/
+       mkdir -p /oracle
+       mkdir -p /oracle/pg_data
+       mkdir -p /oracle/pg_data/archive
+       chown "{{ DB_USER }}" /oracle/pg_data/archive
+    delegate_to: host01
+
+  - name: Start db
+    ansible.builtin.systemd:
+      name: postgresql
+      state: started
+    delegate_to: host01
+
+  - name: Create database
+    community.postgresql.postgresql_db:
+      name: "{{ DB_DATABASE }}"
+      state: present
+    become_user: "{{ DB_USER }}"
+    delegate_to: host01
+
+  - name: Set password for the default PostgreSQL user
+    command: psql -c "ALTER USER postgres WITH PASSWORD '{{ DB_PASSWORD }}';"
+    become_user: "{{ DB_USER }}"
+    delegate_to: host01
+
+  - name: "table_phone_numbers"
       become: yes
       become_user: postgres
       postgresql_table:
@@ -104,7 +95,8 @@
         columns:
         - phonenumber_id SERIAL PRIMARY KEY
         - phonenumber VARCHAR(255) NOT NULL
-    - name: "emails"
+      delegate_to: host01
+  - name: "table_emails"
       become: yes
       become_user: postgres
       postgresql_table:
@@ -113,94 +105,61 @@
         columns:
         - email_id SERIAL PRIMARY KEY
         - email VARCHAR(255) NOT NULL
-    - name: "cr_u"
-      become: yes
-      become_user: postgres
-      postgresql_user:
-        name: "{{ DB_USER }}"
-        password: "{{ DB_PASSWORD }}"
-        state: present
-    - name: "db_gr"
-      become: yes
-      become_user: postgres
-      postgresql_privs:
-        type: database
-        privs: all
-        grant_option: no
-        database: "{{ DB_DATABASE }}"
-        roles: "{{ DB_USER }}"
-    - name: "repl_user"
+      delegate_to: host01
+  - name: "repl_user"
       shell: sudo -u postgres psql -c "CREATE USER {{ DB_REPL_USER }} REPLICATION LOGIN ENCRYPTED PASSWORD '{{ DB_REPL_PASSWORD }}';"
-      ignore_errors: true
-    - name: "arch"
-      file:
-        owner: postgres
-        group: postgres
-        state: directory
-        recurse: yes
-        path: /oracle/pg_data/archive
-    - name: "db_fin"
-      ansible.builtin.debug:
-        msg: Done PSQL
+      ignore_errors: true 
 
-- hosts: db_repl
-  vars_files:
-    - env.yml
-  gather_facts: yes
-  become: yes
-  tasks:
-    - name: "repl_apt"
-      apt:
-        state: present
-        name:
-          - postgresql
-          - postgresql-contrib
-          - python3
-    - name: "repl_s"
-      service: "name={{ item }} state=stopped"
-      with_items:
-        - postgresql
-    - name: "repl_rm"
-      shell: /bin/rm -rf /etc/postgresql/14/main/*
-    - name: "pass"
-      copy:
-        mode: '0600'
-        dest: /var/lib/postgresql/.pgpass
-        src: ./pgpass
-        group: postgres
-        owner: postgres
-    - name: "del_db"
-      become: true
-      become_user: postgres
-      command: rm -rf /var/lib/postgresql/{{ hostvars[inventory_hostname]['POSTGRES_VERSION'] }}/
-    - name: "db_rep"
-      become: true
-      become_user: postgres
-      command: pg_basebackup -h {{ hostvars[inventory_hostname]['DB_HOST'] }} -D /var/lib/postgresql/{{ hostvars[inventory_hostname]['POSTGRES_VERSION'] }}/main/ -p {{ hostvars[inventory_hostname]['DB_PORT'] }} -U {{ hostvars[inventory_hostname]['DB_REPL_USER'] }} -vP -w
+  - name: Stop SLAVE_DB
+    ansible.builtin.systemd:
+      name: postgresql
+      state: stopped
+    delegate_to: host02
+
+  - name: Clear SLAVE_DB
+    become_user: root
+    ansible.builtin.shell: |
+       rm -rf /var/lib/postgresql/14/main/
+       mkdir /var/lib/postgresql/14/main/
+       chown postgres:postgres /var/lib/postgresql/14/main
+    delegate_to: host02
+
+  - name: Replicate DB
+    become_user: root
+    ansible.builtin.command: pg_basebackup -R -D /var/lib/postgresql/14/main/ -P -h 192.168.137.136 -U {{DB_REPL_USER}}
+    delegate_to: host02
+
+  - name: Start SLAVE_DB
+    ansible.builtin.systemd:
+      name: postgresql
+      state: started
+    delegate_to: host02
+
+  - name: Create bot systemd unit file
+    ansible.builtin.shell: |
+      touch /etc/systemd/system/bot.service
+      chmod 0640 /etc/systemd/system/bot.service
+      echo "[Unit]\nDescription=ansible\nAfter=network.target\n[Service]\nUser=root\nWorkingDirectory=/\nExecStart=/usr/bin/python3 /temp/docker/bot_image/bot.py\nRestart=always\nEnvironment='PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'\n[Install]\nWantedBy=multi-user.target" > /etc/systemd/system/bot.service
+    delegate_to: host01
+
+  - name: Reload systemd to recognize the new service
+    ansible.builtin.systemd:
+      daemon_reload: yes
+    delegate_to: host01
+
+  - name: Start bot
+    ansible.builtin.systemd:
+      name: bot
+      state: started
       environment:
-        PGPASSWORD: "{{ hostvars[inventory_hostname]['DB_REPL_PASSWORD'] }}"
-
-    - name: "db_fin"
-      ansible.builtin.debug:
-        msg: Done repl
-
-- hosts: bot
-  gather_facts: yes
-  become: yes
-  tasks:
-    - name: "bot_on"
-      ansible.builtin.debug:
-        msg: "bot on"
-    - name: bot_up
-      environment:
-        TOKEN: "{{ hostvars[inventory_hostname]['TOKEN'] }}"
-        RM_PORT: "{{ hostvars[inventory_hostname]['RM_PORT'] }}"
-        RM_HOST: "{{ hostvars[inventory_hostname]['RM_HOST'] }}"
-        RM_USER: "{{ hostvars[inventory_hostname]['RM_USER'] }}"
-        RM_PASSWORD: "{{ hostvars[inventory_hostname]['RM_PASSWORD'] }}"
-        DB_PORT: "{{ hostvars[inventory_hostname]['DB_PORT'] }}"
-        DB_HOST: "{{ hostvars[inventory_hostname]['DB_HOST'] }}"
-        DB_NAME: "{{ hostvars[inventory_hostname]['DB_DATABASE'] }}"
-        DB_PASSWORD: "{{ hostvars[inventory_hostname]['DB_PASSWORD'] }}"
-        DB_USER: "{{ hostvars[inventory_hostname]['DB_USER'] }}"
-      command: python3 /usr/src/bot/bot.py
+        TOKEN: "{{TOKEN }}"
+        RM_PORT: "{{ RM_PORT }}"
+        RM_HOST: "{{ RM_HOST}}"
+        RM_USER: "{{ RM_USER}}"
+        RM_PASSWORD: "{{RM_PASSWORD}}"
+        DB_PORT: "{{ DB_PORT}}"
+        DB_HOST: "{{ DB_HOST}}"
+        DB_NAME: "{{ DB_DATABASE}}"
+        DB_PASSWORD: "{{ DB_PASSWORD}}"
+        DB_USER: "{{ DB_USER}}"
+    delegate_to: host01
